# capnp-quic-tcp-benchmark

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: capnp_client.rs  main.rs  quic_client.rs
proto/: Cargo.toml  addressbook.capnp  build.rs  calculator.capnp
proto/src/: lib.rs
protos/: Cargo.toml  build.rs
protos/src/: lib.rs
quic-client/: Cargo.toml
quic-client/src/: capnp_client.rs  main.rs  quic_client.rs
quic-server/: Cargo.toml
quic-server/src/: capnp_server.rs  main.rs  quic_server.rs
server/: Cargo.toml
server/src/: capnp_server.rs  main.rs  quic_server.rs
tcp-client/: Cargo.toml
tcp-client/src/: main.rs
tcp-server/: Cargo.toml
tcp-server/src/: main.rs
