[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
ring = ["rustls/ring"]

[dependencies]
# Crate containing generated certs and cap'n proto code
protos = { path = "../protos" }
# Cap'n Proto stuff
capnp = "0.19.6"
capnp-rpc = "0.19.2"
capnp-futures = "0.19.0"
# Async stuff
tokio = { version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.7.4", features = ["compat"] }
# rustls stuff
rustls = "0.23.10"
tokio-rustls = "0.26.0"
# quinn stuff
quinn = "0.11.2"

[target.'cfg(not(any(target_os = "linux", target_os = "windows", target_os = "macos")))'.dependencies]
aws-lc-rs = { version = "1", features = ["bindgen"] }