[package]
name = "quic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
protos = { path = "../protos" }
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["full", "compat"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
quinn = "0.11.2"
rustls = { version = "0.23.10", features = ["aws_lc_rs"]}
capnp = "0.19.6"
capnp-rpc = "0.19.2"
capnp-futures = { version = "0.19.0", features = []}
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-util = "0.3.30"
